--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "inculcate/routing",
-    "description": "The Outgood components.",
+    "description": "The softflies components.",
     "license": "MIT",
     "homepage": "https://softflies.com",
     "support": {
